[tool.poetry]
name = "alarmxtract"
version = "0.1.0"
description = ""
authors = ["Jashon Osala <jashonosala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysimplegui = "^5.0.6"
black = "^24.8.0"
ruff = "^0.6.6"
pytest = "^8.3.3"
pre-commit = "^3.8.0"


[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = []
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
